# awesome-ai-apps

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  README_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.yml  config.yml  feature_implementation.yml  project_addition.yml
.github/workflows/: lint.yml
Examples/Chat_with_Code/: README.md  main.py  requirements.txt
Examples/Crew-starter/: main.py
Examples/LlamaIndex-starter/: nebius-llamaindex.ipynb
Examples/MCP-starter/: main.py
Examples/Pydantic_starter/: requirements.txt
Examples/Qwen-example/: main.py  requirements.txt
Examples/email-mcp/: mcp-client.py  pyproject.toml
Examples/openai-agents-sdk/: .env.example  README.md  basic-agent.py  main.py  requirements.txt
Examples/resume-optimizer/: requirements.txt
advance_ai_agents/ai-hedgefund/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  motia-workbench.json  package.json  tsconfig.json  types.d.ts
advance_ai_agents/analyzer_agent/: README.md  agent.py  requirements.txt
advance_ai_agents/candidate analyser/: README  README.md  hiring_prompts.yaml  main.py
advance_ai_agents/candidate_analyser/: README.md  hiring_prompts.yaml  main.py  requirements.txt
advance_ai_agents/conference_agnositc_cfp_generator/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
advance_ai_agents/conference_talk_abstract_generator/: README.md  adk_research_agent.py  couchbase_utils.py  crawl_talks.py  embeddinggeneration.py  extract_events.py  talk_suggestions_app.py
advance_ai_agents/deep_researcher_agent/: README.md  agents.py  app.py  pyproject.toml  server.py
advance_ai_agents/finance_service_agent/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
advance_ai_agents/job_finder_agent/: .env.example  README.md  app.py  job_agents.py  mcp_server.py  requirements.txt
advance_ai_agents/meeting_assistant_agent/: .env.example  README.md  app.py  main.py  meeting_notes.txt  pyproject.toml
advance_ai_agents/price_monitoring_agent/: README.md  app.py  product_data.json  pyproject.toml  scheduler.py
advance_ai_agents/price_monitoring_agent/agents/: crewai_agents.py  decision_logic.py
advance_ai_agents/price_monitoring_agent/notifier/: email_notifier.py
advance_ai_agents/price_monitoring_agent/tools/: custom_tools.py
advance_ai_agents/smart_gtm_agent/: README.md  app.py  company_data.db  pyproject.toml
advance_ai_agents/smart_gtm_agent/.streamlit/: config.toml
advance_ai_agents/smart_gtm_agent/app/: agents.py
advance_ai_agents/startup_idea_validator_agent/: README.md  app.py  main.py  prompts.py  pyproject.toml
advance_ai_agents/trend_analyzer_agent/: .env.example  README.md
agno_fastapi_agents/: Dockerfile  app.py  docker-compose.yml
agno_fastapi_agents/controllers/: agents.py
agno_fastapi_agents/routes/: agentRoutes.py
course/aws_strands/: README.md
course/aws_strands/03_structured_output/: README.md  main.py  pyproject.toml
mcp_ai_agents/couchbase_mcp_server/: README.md  main.ipynb
mcp_ai_agents/custom_mcp_server/: mcp-server.py
mcp_ai_agents/database_mcp_agent/: README.md  main.py  pyproject.toml
mcp_ai_agents/doc_mcp/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
mcp_ai_agents/doc_mcp/docker/: docker-compose.yml
mcp_ai_agents/doc_mcp/src/: __init__.py
mcp_ai_agents/doc_mcp/src/core/: __init__.py  config.py  exceptions.py  types.py
mcp_ai_agents/doc_mcp/src/database/: __init__.py  mongodb.py  repository.py  vector_store.py
mcp_ai_agents/doc_mcp/src/github/: __init__.py  client.py  file_loader.py  parser.py
mcp_ai_agents/doc_mcp/src/rag/: __init__.py  ingestion.py  models.py  query.py
mcp_ai_agents/doc_mcp/src/ui/: __init__.py  main.py
mcp_ai_agents/doc_mcp/src/ui/components/: __init__.py  common.py
mcp_ai_agents/doc_mcp/src/ui/tabs/: __init__.py  ingestion.py  management.py  mcp.py  query.py  update.py
mcp_ai_agents/docs_qna_agent/: README.md  main.py  pyproject.toml
mcp_ai_agents/github_mcp_agent/: .env.example  README.md  main.py  requirements.txt
mcp_ai_agents/hotel_finder_agent/: README.md  main.py  pyproject.toml
mcp_ai_agents/langchain_langgraph_mcp_agent/: .env.sample  LangChain_MCP_Adapter_Tutorial.ipynb  README.md
mcp_ai_agents/mcp_starter/: README.md  requirements.txt
mcp_ai_agents/scalekit-exa-mcp-security/: .env.example  .gitignore  README.md  auth.py  config.py  exa.py  main.py  pyproject.toml
memory_agents/agno_memory_agent/: README.md
memory_agents/arxiv_researcher_agent_with_memori/: app.py  pyproject.toml  requirements.txt
memory_agents/aws_strands_agent_with_memori/: .env.example  main.py  pyproject.toml
memory_agents/blog_writing_agent/: .env.example  README.md  app.py
memory_agents/brand_reputation_monitor/: README.md  app.py  requirements.txt  workflow.py
memory_agents/product_launch_agent/: README.md  agent.py  chat_app.py  requirements.txt
memory_agents/social_media_agent/: README.md  create_tweet.py  pyproject.toml
rag_apps/agentic_rag/: README.md  main.py  pyproject.toml
rag_apps/agentic_rag_with_web_search/: README.md  crews.py  main.py  pyproject.toml  qdrant_tool.py
rag_apps/chat_with_code/: .env.example  README.md  setup.sh
rag_apps/contextual_ai_rag/: README.md  main.py  requirements.txt
rag_apps/gemma_ocr/: README.md  app.py  main.py  pyproject.toml
rag_apps/llamaIndex_starter/: README.md  main.py
rag_apps/pdf_rag_analyser/: README.md  app.py  requirements.txt
rag_apps/qwen3_rag/: README.md  main.py
rag_apps/resume_optimizer/: README.md  main.py
rag_apps/simple_rag/: nebius_rag.ipynb
simple_ai_agents/blog_writing_agent/: .env.example  README.md  agents.py  app.py  pyproject.toml
simple_ai_agents/talk_to_db/: .env.example  README.md  ai_services.py  app.py  pyproject.toml
starter_ai_agents/aws_strands_starter/: README.md  main.py  pyproject.toml
(+182 files in other folders)
