[project]
name = "meeting-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.8.1",
    "fastapi>=0.116.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.106.1",
    "requests>=2.32.5",
    "slack-sdk>=3.36.0",
    "streamlit[pdf]>=1.49.1",
]
