[project]
name = "smart-gtm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-openai",
    "streamlit",
    "requests",
    "tenacity",
    "python-dotenv",
    "scrapegraph_py",
    "plotly",
    "langchain-nebius",
]
