[project]
name = "hotel-finder-agent"
version = "0.2.0"
description = "Advanced Hotel Finder Agent with AI-powered search and comprehensive filtering capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.7",
    "mcp>=1.12.3",
    "openai>=1.98.0",
    "streamlit>=1.47.1",
    "python-dotenv>=1.0.0",
    "asyncio",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
