[project]
name = "exa-server"
version = "0.1.0"
description = "Exa API MCP Server Security with ScaleKit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.1",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.116.1",
    "scalekit-sdk-python==2.3.2",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "agno>=2.0.0",
    "openai==1.109.1"
]
