[project]
name = "arxiv-researcher-agent-with-memori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.48.1",
    "openai-agents>=0.1.0",
    "memorisdk==1.0.2",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "tavily-python>=0.3.0",
    "pydantic>=2.0.0"
]
