[project]
name = "aws-strands-agent-with-memori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memorisdk>=2.0.0",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.2.6",
    "strands-agents[litellm]>=1.7.1",
]
