[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.6",
    "arize-phoenix>=11.13.2",
    "lancedb>=0.24.2",
    "openai>=1.97.1",
    "openinference-instrumentation-agno>=0.1.10",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "pandas>=2.3.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.1",
    "tantivy>=0.24.0",
]
