[project]
name = "agentic-rag-with-web-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentops>=0.4.18",
    "crewai[tools]>=0.150.0",
    "exa-py>=1.14.18",
    "openai>=1.97.1",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "streamlit>=1.47.1",
]
