[project]
name = "talk_to_db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "langchain>=0.3.27",
    "langchain-nebius>=0.1.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
]
