[project]
name = "3-structured-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.77.7",
    "strands-agents[litellm]>=1.10.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.9",
]
